fix(player-control): let climax point auto choose z-index

--- a/src/assets/style/PlayerControl.scss
+++ b/src/assets/style/PlayerControl.scss
@@ -695,7 +695,6 @@ $shadow-soft: 0 10px 24px rgba(0, 0, 0, 0.12);
 	border-radius: 50%;
 	top: 67%;
 	transform: translate(-50%, -50%);
-	z-index: 1;
 	pointer-events: none;
 }
 
